Correct bug with post date on tablets.

--- a/sass/partials/components/post/_header.scss
+++ b/sass/partials/components/post/_header.scss
@@ -13,6 +13,7 @@
 
 .post__header__meta {
   margin-top: $header-height;
+  margin-right: $default-padding;
 
   float: right;
 
